# Config-Serilization-Tutorials

./: .gitignore  README.md
demo/txt_to_yaml/: 000001.yml  get_yaml_format.py  txt_to_yaml.py
demo/txt_to_yaml/txt/dayTraining_1/: dayClip1--00000.txt  dayClip1--00001.txt  dayClip1--00002.txt
demo/txt_to_yaml/txt/dayTraining_2/: dayClip2--00000.txt  dayClip2--00001.txt  dayClip2--00002.txt
demo/txt_to_yaml/yaml/: dayClip1--00000.yml  dayClip1--00001.yml  dayClip1--00002.yml  dayClip2--00000.yml  dayClip2--00001.yml  dayClip2--00002.yml
ini/: test2.ini
ini_python/: Integrated_OOP.py  read_demo.py  test1.ini  test3.ini  write_demo.py
json_python/: demo.py
yaml/python/: yaml_test.py
yaml/yaml_cpp/: debug.sh  release.sh
yaml_cpp/: CMakeLists.txt  debug.sh  release.sh  show_callgraph.sh
yaml_cpp/src/: config.yaml  main.cpp  output.yaml
yaml_python/: read_demo.py  test1.yaml  test2.yaml  write_demo.py
